# basic_vision_sys

./: CMakeLists.txt  EKF_TELEMETRY_SUCCESS.md  build_telemetry.sh  first_run_sitl.md  start_telemetry_dashboard.sh  test_mavlink_frequency.cpp  test_mavlink_ids.cpp  test_telemetry.cpp
docs/: TELEMETRY_README.md  telemetry_integration_guide.h
examples/: ekf_telemetry_example.cpp  simple_telemetry_example.cpp  telemetry_example.cpp
include/: CameraSource.h  GazeboSource.h  ImageSourceInterface.h  SimpleTelemetry.h  Telemetry.h  parameters.h
include/common/: LatestData.h  Logger.h
include/control/: ControlTypes.h  Controllers.h  UAVController.h
include/core/: UAVStateMachine.h
include/mavcomm/: SimpleQuaternionReader.h  mavlink_comm_module.h
include/telemetry/: TelemetryEntry.h  TelemetryPublisher.h
include/vision/core/: CameraSource.h  ImageSourceFactory.h
include/vision/pipelines/: aruco_ekf_estimator.h  aruco_pose_pipeline.h  ekf.hpp
include/visualization/: GenericDebugVisualizer.h  VisualizationData.h
simLogs/uav_control_20250617_150924_20250617_150924/: ARUC.csv  CTRL.csv  EKFS.csv  FRAM.csv  INIT.csv  POST.csv  STAT.csv  description.txt
src/: CameraSource.cpp  GazeboSource.cpp  SimpleTelemetry.cpp  aruco_pose_test.cpp  main.cpp  test_camera_performance.cpp  uav_controller_test.cpp
src/common/: Logger.cpp
src/control/: UAVController.cpp
src/core/: UAVStateMachine.cpp
src/mavcomm/: SimpleQuaternionReader.cpp  mavlink_comm_module.cpp
src/telemetry/: TelemetryEntry.cpp  TelemetryPublisher.cpp
src/vision/core/: CameraSource.cpp  GazeboSource.cpp
src/vision/pipelines/: aruco_ekf_estimator.cpp  aruco_pose_pipeline.cpp
src/visualization/: GenericDebugVisualizer.cpp
tools/: commands.md  generic_telemetry_viewer.py  logViewer.py  msg_setup.py  test_udp_listener.py
tools/example_scope/: custom_scope.py  udp_telemetry_server.cpp  udp_telemetry_server.h
